link de verificacion

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,9 @@ MONGO_PASSWORD=
 
 MONGO_URL=
 MONGO_DB_NAME=
+
+MAILER_SERVICE=gmail
+MAILER_EMAIL=
+MAILER_SECRET_KEY=
+
+WEBSERVER_URL=http://localhost:3000/api
